--- a/app/views/investigations/pages/pre/_tatemonosuijyunsokuryokekkahyo.html.erb
+++ b/app/views/investigations/pages/pre/_tatemonosuijyunsokuryokekkahyo.html.erb
@@ -3,7 +3,7 @@
     <table class="table table-bordered" style="font-size:10px;">
       <tr>
         <td colspan="4">建物水準測量結果表</td>
-        <td>家屋番号：<%= house.id %></td>
+        <td>家屋番号：<%= house.house_number %></td>
       </tr>
       <tr>
         <td>測点</td>
