--- a/app/views/investigations/pages/after/_hyoshi.html.erb
+++ b/app/views/investigations/pages/after/_hyoshi.html.erb
@@ -1,24 +1,10 @@
-<% if survey_type == "pre" %>
-  <% survey_name = "事前" %>
-<% elsif survey_type == "ongoing" %>
-  <% survey_name = "事中" %>
-<% elsif survey_type == "after" %>
-  <% survey_name = "事後" %>
-<% end %>
-
 <div class="page">
   <div class="subpage">
     <h1 class="text-center"><%= @investigation.construction_name %></h1>
-    <h2 class="text-center"><%= @investigation.content %> <%= survey_name %>調査報告書</h2>
-    <p class="text-center"><%= @investigation.start_pre_survey %>～<%= @investigation.stop_pre_survey %></p>
+    <h2 class="text-center"><%= @investigation.content %> 事後調査報告書</h2>
+    <p class="text-center"><%= @investigation.start_after_survey %>～<%= @investigation.stop_after_survey %></p>
     <p class="text-center">家屋番号：1～<%= @houses.count%></p>
     <p class="text-center">施工者：<%= @investigation.builder %></p>
-    <% if survey_name == "事前" %>
-      <p class="text-center">調査機関：<%= @investigation.investigator_pre_survey %></p>
-    <% elsif survey_name == "事中" %>
-      <p class="text-center">調査機関：<%= @investigation.investigator_ongoing_survey %></p>
-    <% else %>
-      <p class="text-center">調査機関：<%= @investigation.investigator_after_survey %></p>
-    <% end %>
+    <p class="text-center">調査機関：<%= @investigation.investigator_after_survey %></p>
   </div>
 </div>
