--- a/app/views/investigations/pages/pre/_tatemonokeisyasokuteikekkahyo.html.erb
+++ b/app/views/investigations/pages/pre/_tatemonokeisyasokuteikekkahyo.html.erb
@@ -3,7 +3,7 @@
     <table class="table table-bordered" style="font-size:10px;">
       <tr>
         <td colspan="11">建物傾斜測定結果表</td>
-        <td>建物No.<%= house.id %></td>
+        <td>建物No.<%= house.house_number %></td>
       </tr>
       <tr>
         <td rowspan="2">傾斜種類</td>
@@ -24,19 +24,39 @@
       <% keisyas.each do |keisya| %>
         <% pre_slope = keisya.slopes.find_by(survey_type: "pre") %>
         <tr>
-          <td>
-            <% if pre_slope.suichokukeisya == true %>
-              垂直傾斜
-            <% elsif pre_slope.suiheikeisya == true %>
-              水平傾斜
-            <% end %>
-          </td>
+          <% if pre_slope.suichokukeisya == true %>
+            <td>垂直傾斜</td>
+          <% elsif pre_slope.suiheikeisya == true %>
+            <td>水平傾斜</td>
+          <% else %>
+            <td></td>
+          <% end %>
+
           <td><%= disp_alphabet(keisya.number) %></td>
           <td><%= keisya.room_name %></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
+          
+          <% if pre_slope.east != 0.0 %>
+            <td>東</td>
+            <td><%= pre_slope.east %></td>
+          <% elsif pre_slope.west != 0.0 %>
+            <td>西</td>
+            <td><%= pre_slope.west %></td>
+          <% else %>
+            <td></td>
+            <td></td>
+          <% end %>
+          
+          <% if pre_slope.north != 0.0 %>
+            <td>北</td>
+            <td><%= pre_slope.north %></td>
+          <% elsif pre_slope.south != 0.0 %>
+            <td>南</td>
+            <td><%= pre_slope.south %></td>
+          <% else %>
+            <td></td>
+            <td></td>
+          <% end %>
+
           <td></td>
           <td></td>
           <td></td>
