--- a/app/views/slopes/_form.html.erb
+++ b/app/views/slopes/_form.html.erb
@@ -57,7 +57,8 @@
         <%= f.label :comment, 'コメント' %>
         <%= f.text_area :comment, :class=>"form-control" %>
       </div>
-      <%= f.submit '登録', :class=>"btn btn-primary", :id=>"submit", method: :delete, data: { confirm: '登録してよろしいでしょうか？' } %>
+      <%= f.submit '登録', :class=>"btn btn-primary", :id=>"submit", method: :delete, 
+        data: { confirm: '入力の間違いはありませんか？もう一度確認してください。無ければ登録しますがよろしいでしょうか？' } %>
     <% end %>
   </div>
 </div>
